# forget-me-not

./: Cargo.toml  readme.md  rustfmt.toml
.github/workflows/: ci.yml  code-coverage.yml
misc/: com.example.fmn.plist  fmn.service
src/: client.rs  comm.rs  daemon.rs  format.rs  lib.rs  notify.rs  scheduler.rs
src/comm/: listener.rs  mod.rs
src/task_manager/: manager.rs  mod.rs  task.rs  task_context.rs
tests/: entry.rs  fmn.rs  scheduler.rs  task.rs
tests/cli/: context.rs  helpers.rs  mod.rs  scheduler.rs  task.rs
