[package]
name = "task-reminder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.10", features = ["derive"] }
env_logger = "0.9.1"
log = "0.4.17"
nanoid = "0.4.0"
notify-rust = "4.5.10"
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
time = { version = "0.3.15", features = ["local-offset", "serde", "macros"] }
tokio = { version = "1.21.2", features = ["time", "rt", "sync", "macros"] }

[dev-dependencies]
tempfile = "3.3.0"

[features]
