[package]
name = "task-reminder"
version = "0.1.0"
edition = "2021"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.10", features = ["derive"] }
env_logger = "0.9.1"
log = "0.4.17"
nanoid = "0.4.0"
notify-rust = "4.5.10"
once_cell = "1.16.0"
prettytable-rs = "0.9.0"
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
time = { version = "0.3.15", features = ["local-offset", "serde", "macros", "formatting"] }
tokio = { version = "1.21.2", features = ["time", "rt", "sync", "macros"] }

[[test]]
path = "tests/entry.rs"
name = "integration"

[dev-dependencies]
assert_cmd = "2.0.7"
ctor = "0.1.26"
predicates = "2.1.5"
tempfile = "3.3.0"

[features]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
